--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^17.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
